# Temper

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  requirements.txt
docs/sphinx/source/: conf.py  index.rst  specifications.rst
include/: CMakeLists.txt
include/temper/: Autograd.hpp  Errors.hpp  ML.hpp  Math.hpp  NN.hpp  SYCLQueue.hpp  SYCLUtils.hpp  Stats.hpp  Tensor.hpp  Utils.hpp
src/: Autograd.cpp  CMakeLists.txt  ML.cpp  Math.cpp  NN.cpp  SYCLQueue.cpp  Stats.cpp  Tensor.cpp
tests/: CMakeLists.txt  ut_ML.cpp  ut_Math.cpp  ut_NN.cpp  ut_Stats.cpp  ut_Tensor.cpp
tests/math/: upsample.cpp  upsample.py
tests/nn/: conv2d.cpp  conv2d.py  conv2d_transpose.cpp  conv2d_transpose.py
tests/stats/: chisquare_cdf.cpp  chisquare_cdf.py  chisquare_isf.cpp  chisquare_isf.py  chisquare_logpdf.cpp  chisquare_logpdf.py  chisquare_mean.cpp  chisquare_mean.py  chisquare_pdf.cpp  chisquare_pdf.py  chisquare_ppf.cpp  chisquare_ppf.py  chisquare_rvs.cpp  chisquare_rvs.py  chisquare_stddev.cpp  chisquare_stddev.py  chisquare_var.cpp  chisquare_var.py
